corpus/column_heading.txt
================================================================================
Simple uppercase heading
================================================================================
HELLO

Test
--------------------------------------------------------------------------------

(help_file
  (column_heading
    (uppercase_name))
  (line
    (word)))

================================================================================
Multiple words uppercase heading
================================================================================
HELLO WORLD

Test
--------------------------------------------------------------------------------

(help_file
  (column_heading
    (uppercase_name))
  (line
    (word)))

================================================================================
Heading with tag
================================================================================
HELLO WORLD        *abc*

Test
--------------------------------------------------------------------------------

(help_file
  (column_heading
    (uppercase_name)
    (tag
      (word)))
  (line
    (word)))

================================================================================
Heading lowercase
================================================================================
Test~

Below
--------------------------------------------------------------------------------

(help_file
  (column_heading
    (column_name
      (word)))
  (line
    (word)))

================================================================================
Heading with multiple words
================================================================================
Multiple words~

Bleh
--------------------------------------------------------------------------------

(help_file
  (column_heading
    (column_name
      (word)
      (word)))
  (line
    (word)))
