corpus/header.txt
================================================================================
Simple file with text
================================================================================
Simple text
--------------------------------------------------------------------------------

(help_file
  (line
    (word)
    (word)))

================================================================================
Multiline text
================================================================================
Multiline
text
--------------------------------------------------------------------------------

(help_file
  (line
    (word))
  (line
    (word)))
