corpus/heading1_2.txt
================================================================================
h1 h2 heading
================================================================================

==============================================================================
Heading1                                                            *heading1*

Text

-----------------------------------------------------------------------
Heading two                                                *tag2.1*   *tag2.2*

Text2


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (h1
        (word)
        (tag
          (word)))))
  (block
    (line
      (word)))
  (block
    (line
      (h2
        (word)
        (word)
        (tag
          (word))
        (tag
          (word)))))
  (block
    (line
      (word))))

================================================================================
h1 h2 heading with tag at the start
================================================================================

==============================================================================
*03.1*	Word movement

Text

------------------------------------------------------------------------------
*05.6*	heading two

Text


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (h1
        (tag
          (word))
        (word)
        (word))))
  (block
    (line
      (word)))
  (block
    (line
      (h2
        (tag
          (word))
        (word)
        (word))))
  (block
    (line
      (word))))

================================================================================
NOT h1 h2 heading
================================================================================

 ===============================================================================
must-start-at-column-1

 ===============================================================================
 must-start-at-column-1

====
Not-a-heading-1                                                     *heading1*

Text

---
Not-a-heading-2 more words                                          *heading2*

Text

===========a======b========3089uaafaewf_-----awefpoij===========================
Not-a-heading-3                                                     *heading3*

Text

------------===============--------------------=================================
Not-a-heading-4                                                     *heading4*
Text


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word))
    (line
      (word)))
  (block
    (line
      (word))
    (line
      (word)))
  (block
    (line
      (word))
    (line
      (word)
      (tag
        (word))))
  (block
    (line
      (word)))
  (block
    (line
      (word))
    (line
      (word)
      (word)
      (word)
      (tag
        (word))))
  (block
    (line
      (word)))
  (block
    (line
      (word))
    (line
      (word)
      (tag
        (word))))
  (block
    (line
      (word)))
  (block
    (line
      (word))
    (line
      (word)
      (tag
        (word)))
    (line
      (word))))
