corpus/heading3-column_heading.txt
================================================================================
h3 (uppercase) heading
================================================================================
HELLO

Test

GUI ~
Text
--------------------------------------------------------------------------------

(help_file
  (h3
    (uppercase_name))
  (block
    (line
      (word)))
  (block
    (line
      (column_heading
        (uppercase_name)))
    (line
      (word))))

================================================================================
h3 (uppercase) heading, multiple words
================================================================================
HELLO WORLD

  LEADING-SPACE-NOT-A-HEADING
--------------------------------------------------------------------------------

(help_file
  (h3
    (uppercase_name))
  (block
    (line
      (word))))

================================================================================
h3 heading with tag
================================================================================
HELLO WORLD        *abc*

Test
--------------------------------------------------------------------------------

(help_file
  (h3
    (uppercase_name)
    (tag
      (word)))
  (block
    (line
      (word))))

================================================================================
column_heading lowercase
================================================================================
Test~

Below
--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (column_heading
        (word))))
  (block
    (line
      (word))))

================================================================================
column_heading with multiple words
================================================================================
Multiple words~

text

nvim_ui_try_resize({width}, {height})                   *nvim_ui_try_resize()*
    TODO: Documentation

    Attributes: ~
        |RPC| only
--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (column_heading
        (word)
        (word))))
  (block
    (line
      (word)))
  (block
    (line
      (word)
      (argument
        (word))
      (word)
      (argument
        (word))
      (word)
      (tag
        (word)))
    (line
      (word)
      (word)))
  (block
    (line
      (column_heading
        (word)))
    (line
      (taglink
        (word))
      (word))))

================================================================================
column_heading should NOT parse atoms (links, tags, etc.) (FIXME)
================================================================================
    Example: >
            echo spellbadword("the quik brown fox")
<			'quik', 'bad' ~

    Text.

--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (codeblock
        (line))))
  (block
    (line
      (column_heading
        (optionlink
          (word))
        (word)
        (optionlink
          (word)))))
  (block
    (line
      (word))))

================================================================================
NOT h3 uppercase heading
================================================================================
^V	0x16	 22	(SYN)
^W	0x17	 23	END

ABC not-h3

4. 'runtimepath' `/xxx;yyy/baz`.The
   `/foo/bar`-and-`/abc`.
5. PRODUCT of 3.
   ...`/lua`-path,-leaving:

--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (word)))
  (block
    (line
      (word)
      (word)))
  (block
    (line
      (word)
      (optionlink
        (word))
      (codespan
        (word))
      (word))
    (line
      (codespan
        (word))
      (word))
    (line
      (word)
      (word)
      (word)
      (word))
    (line
      (word))))

================================================================================
NOT column_heading
================================================================================
tilde ~/foo/bar foo~ bar

--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (word)
      (word)
      (word))))
