corpus/headline.txt
================================================================================
simple headline
================================================================================

==============================================================================
Headline                                                             *headline*

Text

--------------------------------------------------------------------------------

(help_file
  (headline
    (word)
    (tag
      (word)))
  (block
    (line
      (word))))

================================================================================
headline with tag at the start
================================================================================

==============================================================================
*03.1*	Word movement

Text

--------------------------------------------------------------------------------

(help_file
  (headline
    (tag
      (word))
    (word)
    (word))
  (block
    (line
      (word))))

================================================================================
NOT a headline
================================================================================

====
Not-a-headline-1                                                     *headline1*

Text

---
Not-a-headline-2 more words                                          *headline2*

Text

===========a======b========3089uaafaewf_-----awefpoij===========================
Not-a-headline-3                                                     *headline3*

Text

------------===============--------------------=================================
Not-a-headline-4                                                     *headline4*
Text

--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word))
    (line
      (word)
      (tag
        (word))))
  (block
    (line
      (word)))
  (block
    (line
      (word))
    (line
      (word)
      (word)
      (word)
      (tag
        (word))))
  (block
    (line
      (word)))
  (block
    (line
      (word))
    (line
      (word)
      (tag
        (word))))
  (block
    (line
      (word)))
  (block
    (line
      (word))
    (line
      (word)
      (tag
        (word)))
    (line
      (word))))
