corpus/option.txt
================================================================================
option alone
================================================================================

'hello'

--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (option
        (word)))))

================================================================================
option in text
================================================================================

world 'hello' world

--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (option
        (word))
      (word))))

================================================================================
NOT an option #7 #14
================================================================================

Let's see if that works.
no! ','sqlKeyword'
single-char '-' 'g' '보'
non-ascii: '\"' '%)' '-bang' '.*\\.log' '.gitignore' '@{${\"foo\"}}'
number: '04' 'ISO-10646-1' 'python3'

	Option	  '	:help 'textwidth'
	Regular	  /	:help /[

--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (word)))
  (block
    (line
      (word)
      (word)
      (word)
      (option
        (word)))
    (line
      (word)
      (word)
      (word)
      (word))))
