corpus/optionlink.txt
================================================================================
optionlink alone
================================================================================
'hello'


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (optionlink
        (word)))))

================================================================================
optionlink in text
================================================================================
world 'hello' world


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (optionlink
        (word))
      (word))))

================================================================================
NOT optionlink: ' or 'x
================================================================================
'fillchars'
stl		' ' or '^'	statusline
tricky:	' 'yes'  's foo


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (optionlink
        (word)))
    (line
      (word)
      (word)
      (word)
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (optionlink
        (word))
      (word)
      (word))))

================================================================================
NOT optionlink #7 #14
================================================================================
Let's see.
no! ','sqlKeyword'
single-char '-' 'g' '보'
non-ascii: '\"' '%)' '-bang' '.*\\.log' '.gitignore' '@{${\"foo\"}}'
number: '04' 'ISO-10646-1' 'python3'
Option	  '	:help 'textwidth'
Regular	  /	:help /[


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)
      (ERROR
        (word))
      (word)
      (word)
      (argument
        (word))
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (optionlink
        (word)))
    (line
      (word)
      (word)
      (word)
      (word)
      (word))))

================================================================================
NOT optionlink 2
================================================================================
'{a-z}  `{a-z} foo
x `after_codespan`'s


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (codespan
        (word)
        (MISSING "`")))
    (line
      (word)
      (codespan
        (word))
      (word))))

================================================================================
NOT optionlink 3
================================================================================
foo '"\ '.  Notice
|foo|


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (word)
      (word)
      (word))
    (line
      (taglink
        (word)))))
